# brain-image-implementation

./: .dockerignore  .env  .gitignore  CONTAINER.md  Dockerfile  README.md  build_docker.sh  diffusion_impl.ipynb  explore.ipynb  main.py  pyproject.toml  pyrightconfig.json  run_tests.py  singularity.def  singularity_base.def
checkpoints/aligned_synclr/version_19/: events.out.tfevents.1745496104.Lynx.77083.0  hparams.yaml
checkpoints/aligned_synclr/version_20/: events.out.tfevents.1745618985.Lynx.171843.0  hparams.yaml
checkpoints/synclr/version_47/: events.out.tfevents.1745493487.Lynx.51980.0  hparams.yaml
checkpoints/synclr/version_63/: events.out.tfevents.1745618362.Lynx.167592.0  hparams.yaml
configs/: data.yaml  eval_nice.yaml  gen_embed.yaml  train_nice.yaml
scripts/: download_models.py  evaluate_nice.py  gen_embeddings.py  profile_train_nice.py  setup_wandb.py  sweep.py  sync.sh  test_wandb.py  train_nice.py
scripts/container/: build_singularity.sh  run_singularity.sh  shell_singularity.sh  singularity.def  singularity_base.def  sync_image.sh
scripts/slurm/: README.md  interactive.sh  run_gen_embeddings.sh  run_profile_train_nice.sh  run_sweep.sh  run_train_nice.sh
src/: configs.py  data.py  model.py  train.py  trainer.py  utils.py
src/brain_image/: configs.py  data.py  model.py  trainer.py
src/brain_image/configs/: README.md  config.yaml  data.yaml  download_models.yaml  eval_nice.yaml  evaluate_nice.yaml  gen_embeddings.yaml  nice_config.yaml  profile_train_nice.yaml  sweep.yaml  train_nice.yaml  trainer_config.yaml
src/brain_image/configs/dataset/: eeg_dataset.yaml  eeg_dataset_fast.yaml
src/brain_image/configs/dataset_config/: eeg_dataset_config.yaml
src/brain_image/configs/encoder/: eeg_encoder.yaml
src/brain_image/configs/model/: nice_model.yaml
src/brain_image/configs/submodel_config/: eeg_encoder_config.yaml
src/brain_image/configs/trainer/: nice_trainer sweep.yaml  nice_trainer.yaml  nice_trainer_sweep.yaml
src/brain_image/configs/trainer_config/: nice_trainer.yaml
src/brain_image_implementation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  test_data.py  test_model.py  test_trainer.py
